--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,26 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Jacques+Francois+Shadow&display=swap">
 </head>
 
 <body>
     <app-root></app-root>
+    <div class="container">
+        <div class="row">
+
+            <div class="col">
+                <p class="WebName">MOS Burgers</p>
+            </div>
+            <div class="col">
+                <input type="text" name="username" placeholder="Username">
+                <input type="password" name="password" placeholder="Password">
+                <button type="button" class="btn btn-success">Login</button>
+            </div>
+        </div>
+        </form>
+    </div>
+
 </body>
 
 </html>
